// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component default icon matches snapshot 1`] = `
<div>
  <i
    class="material-icons  css-96rp51-Icon"
  >
    accessibility
  </i>
</div>
`;

exports[`Icon component outlined icon matches snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined  css-96rp51-Icon"
  >
    accessibility
  </i>
</div>
`;
